# Discord-Bot-Docker-Guide

./: README.md  pyproject.toml  requirements.txt
Requirements/: Dockerfile
Start-Scripts/: start.sh
